[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/UserInterface.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Main.gd" type="Script" id=2]

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="UserInterface" parent="." instance=ExtResource( 1 )]

[node name="Message" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -35.5
margin_top = -126.0
margin_right = 35.5
margin_bottom = -112.0

[connection signal="new_game" from="UserInterface" to="." method="new_game"]
[connection signal="quit_game" from="UserInterface" to="." method="quit_game"]
